--- a/Assets/UI/Styles/NewShop.uss
+++ b/Assets/UI/Styles/NewShop.uss
@@ -729,3 +729,30 @@
     border-bottom-width: 5px;
     opacity: 0.8;
 }
+
+.InventoryName {
+    width: 30%;
+    height: 70%;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    white-space: normal;
+}
+
+.CheckoutCard:active {
+    background-color: rgb(255, 255, 255);
+    width: 95%;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    border-left-color: rgb(255, 0, 0);
+    border-right-color: rgb(255, 0, 0);
+    border-top-color: rgb(255, 0, 0);
+    border-bottom-color: rgb(255, 0, 0);
+    border-left-width: 5px;
+    border-right-width: 5px;
+    border-top-width: 5px;
+    border-bottom-width: 5px;
+    flex-direction: row;
+    margin-bottom: 5px;
+    opacity: 0.6;
+}
