--- a/Assets/UI/Styles/Inventory.uss
+++ b/Assets/UI/Styles/Inventory.uss
@@ -329,3 +329,43 @@
     border-bottom-width: 4px;
     opacity: 0.6;
 }
+
+.ToolButtonSendInventory {
+    background-color: rgb(185, 27, 24);
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+    white-space: normal;
+    font-size: 20px;
+}
+
+.ToolButtonSendInventory:active {
+    background-color: rgb(185, 27, 24);
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+    white-space: normal;
+    font-size: 20px;
+    opacity: 0.6;
+}
+
+.ItemButtons {
+    width: 48%;
+    white-space: normal;
+    background-color: rgba(255, 197, 0, 255);
+    color: rgba(0, 0, 0, 255);
+    -unity-font-style: bold;
+}
+
+.ItemButtons:active {
+    width: 48%;
+    white-space: normal;
+    background-color: rgb(255, 197, 0);
+    color: rgb(0, 0, 0);
+    -unity-font-style: bold;
+    opacity: 0.6;
+}
