--- a/Assets/UI/Styles/Inventory.uss
+++ b/Assets/UI/Styles/Inventory.uss
@@ -356,8 +356,8 @@
 .ItemButtons {
     width: 48%;
     white-space: normal;
-    background-color: rgba(255, 197, 0, 255);
-    color: rgba(0, 0, 0, 255);
+    background-color: rgb(255, 197, 0);
+    color: rgb(0, 0, 0);
     -unity-font-style: bold;
 }
 
@@ -367,5 +367,35 @@
     background-color: rgb(255, 197, 0);
     color: rgb(0, 0, 0);
     -unity-font-style: bold;
+    opacity: 0.6;
+}
+
+.EquipItemSlot {
+    flex-grow: 0;
+    height: 90%;
+    width: 15%;
+}
+
+.InfoButton {
+    border-left-color: rgba(255, 255, 255, 255);
+    border-right-color: rgba(255, 255, 255, 255);
+    border-top-color: rgba(255, 255, 255, 255);
+    border-bottom-color: rgba(255, 255, 255, 255);
+    background-color: rgba(176, 0, 0, 255);
+}
+
+.EquipItemSlot:active {
+    flex-grow: 0;
+    height: 90%;
+    width: 15%;
+    opacity: 0.6;
+}
+
+.InfoButton:active {
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    background-color: rgb(176, 0, 0);
     opacity: 0.6;
 }
