--- a/Assets/UI/UIScreens/PhoneButton.uxml
+++ b/Assets/UI/UIScreens/PhoneButton.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="/Assets/UI/Styles/PhoneButtonStyles.uss" />
-    <ui:VisualElement name="PhoneContainer" class="PhoneContainer" style="width: 100%; height: 100%;">
+    <ui:VisualElement name="PhoneContainer" class="PhoneContainer" style="width: 100%; height: 100%; display: flex;">
         <ui:Button display-tooltip-when-elided="true" name="RealPhoneButtonContainer" class="RealPhoneButtonContainer" style="display: none;">
             <ui:VisualElement name="RealPhoneContainer" class="RealPhoneContainer">
                 <ui:VisualElement name="RealPhone" class="RealPhone">
@@ -22,7 +22,7 @@
                                 <ui:Button text="Financials" display-tooltip-when-elided="true" name="FinancialsApp" class="AppButtons" style="width: 50%; height: 100%;" />
                             </ui:VisualElement>
                             <ui:VisualElement class="TwoAppContainer">
-                                <ui:Button text="Button" display-tooltip-when-elided="true" class="AppButtons" />
+                                <ui:Button text="Inventory" display-tooltip-when-elided="true" name="InventoryButton" class="AppButtons" />
                             </ui:VisualElement>
                         </ui:ScrollView>
                     </ui:VisualElement>
@@ -30,7 +30,7 @@
             </ui:VisualElement>
         </ui:Button>
         <ui:Button display-tooltip-when-elided="true" name="phoneButton" class="PhoneButton" style="width: 10%; top: 0; left: 89%; background-image: url(&apos;/Assets/UI/Textures/Phone.png&apos;); display: flex; right: 0;" />
-        <ui:Button display-tooltip-when-elided="true" name="TimeWeather" class="TimeWeatherContainer" style="border-left-width: 4px; border-right-width: 4px; border-top-width: 4px; border-bottom-width: 4px; height: 25%;">
+        <ui:Button display-tooltip-when-elided="true" name="TimeWeather" class="TimeWeatherContainer" style="border-left-width: 4px; border-right-width: 4px; border-top-width: 4px; border-bottom-width: 4px; height: 25%; display: flex;">
             <ui:VisualElement style="width: 30%; height: 100%; border-right-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); align-items: center; justify-content: center;">
                 <ui:Label display-tooltip-when-elided="true" name="WeatherIcon" style="height: 70%; background-image: url(&apos;/Assets/UI/Textures/Sun.png&apos;); -unity-background-scale-mode: stretch-to-fill;" />
                 <ui:Label text="Sunny" display-tooltip-when-elided="true" style="height: 30%; font-size: 18px; color: rgb(2, 0, 0); -unity-font-style: bold-and-italic; -unity-text-align: upper-center;" />
