--- a/Assets/UI/Styles/NewShop.uss
+++ b/Assets/UI/Styles/NewShop.uss
@@ -757,3 +757,9 @@
     margin-bottom: 5px;
     opacity: 0.6;
 }
+
+.EmptySellList {
+    font-size: 120px;
+    -unity-font-style: bold-and-italic;
+    color: rgba(255, 255, 255, 255);
+}
