--- a/Assets/UI/Styles/PhoneButtonStyles.uss
+++ b/Assets/UI/Styles/PhoneButtonStyles.uss
@@ -316,3 +316,72 @@
     border-bottom-color: rgb(241, 0, 0);
     opacity: 0.6;
 }
+
+.TriviaButton {
+    width: 90%;
+    flex-direction: row;
+    height: 15%;
+    color: rgb(238, 238, 238);
+    background-color: rgba(88, 88, 88, 0);
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    margin-top: 5px;
+}
+
+.TriviaButton:active {
+    width: 90%;
+    flex-direction: row;
+    height: 15%;
+    color: rgb(238, 238, 238);
+    background-color: rgba(88, 88, 88, 0);
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    margin-top: 5px;
+    opacity: 0.6;
+}
+
+.LetterTriviaAnswer {
+    width: 20%;
+    font-size: 30px;
+    -unity-font-style: bold;
+    color: rgb(0, 0, 0);
+    border-right-width: 2px;
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    height: 100%;
+}
+
+.Answers {
+    width: 80%;
+    font-size: 16px;
+    -unity-font-style: bold;
+    white-space: normal;
+    color: rgb(0, 0, 0);
+}
+
+.QuestionContainer {
+    height: 20%;
+    width: 100%;
+}
+
+.Question {
+    font-size: 16px;
+    -unity-font-style: bold;
+    color: rgb(0, 0, 0);
+    height: auto;
+    white-space: normal;
+}
