--- a/Assets/UI/UIScreens/PhoneButton.uxml
+++ b/Assets/UI/UIScreens/PhoneButton.uxml
@@ -2,7 +2,7 @@
     <Style src="/Assets/UI/Styles/PhoneButtonStyles.uss" />
     <ui:VisualElement name="PhoneContainer" class="PhoneContainer" style="width: 100%; height: 100%; display: flex;">
         <ui:Button display-tooltip-when-elided="true" name="RealPhoneButtonContainer" class="RealPhoneButtonContainer" style="display: none;">
-            <ui:VisualElement name="RealPhoneContainer" class="RealPhoneContainer">
+            <ui:VisualElement name="RealPhoneContainer" class="RealPhoneContainer" style="display: flex;">
                 <ui:VisualElement name="RealPhone" class="RealPhone">
                     <ui:VisualElement name="RealPhoneScreen" class="RealPhoneScreen" style="display: flex;">
                         <ui:VisualElement name="BackButtonContainer" style="width: 100%; height: 10%; display: none;">
@@ -23,8 +23,30 @@
                             </ui:VisualElement>
                             <ui:VisualElement class="TwoAppContainer">
                                 <ui:Button text="Inventory" display-tooltip-when-elided="true" name="InventoryButton" class="AppButtons" />
+                                <ui:Button text="Trivia" display-tooltip-when-elided="true" name="TriviaButton" class="AppButtons" />
                             </ui:VisualElement>
                         </ui:ScrollView>
+                        <ui:VisualElement name="TriviaContent" style="width: 100%; height: 80%; align-items: center; display: none;">
+                            <ui:VisualElement name="QuestionContainer" class="QuestionContainer">
+                                <ui:Label text="Label" display-tooltip-when-elided="true" name="Question" class="Question" />
+                            </ui:VisualElement>
+                            <ui:Button display-tooltip-when-elided="true" name="FirstAnswer" class="TriviaButton">
+                                <ui:Label text="A" display-tooltip-when-elided="true" name="FirstLetter" class="LetterTriviaAnswer" />
+                                <ui:Label text="Label" display-tooltip-when-elided="true" name="FirstAnswerLabel" class="Answers" />
+                            </ui:Button>
+                            <ui:Button display-tooltip-when-elided="true" name="SecondAnswer" class="TriviaButton" style="width: 90%; flex-direction: row; height: 15%; color: rgb(238, 238, 238); background-color: rgba(88, 88, 88, 0); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-left-width: 2px; border-right-width: 2px; border-top-width: 2px; border-bottom-width: 2px; margin-top: 5px;">
+                                <ui:Label text="B" display-tooltip-when-elided="true" name="SecondLetter" class="LetterTriviaAnswer" style="width: 20%; font-size: 30px; -unity-font-style: bold; color: rgb(0, 0, 0); border-right-width: 2px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); height: 100%;" />
+                                <ui:Label text="Label" display-tooltip-when-elided="true" name="SecondAnswerLabel" class="Answers" style="width: 80%; font-size: 16px; -unity-font-style: bold; white-space: normal; color: rgb(0, 0, 0);" />
+                            </ui:Button>
+                            <ui:Button display-tooltip-when-elided="true" name="ThirdAnswer" class="TriviaButton" style="width: 90%; flex-direction: row; height: 15%; color: rgb(238, 238, 238); background-color: rgba(88, 88, 88, 0); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-left-width: 2px; border-right-width: 2px; border-top-width: 2px; border-bottom-width: 2px; margin-top: 5px;">
+                                <ui:Label text="C" display-tooltip-when-elided="true" name="ThirdLetter" class="LetterTriviaAnswer" style="width: 20%; font-size: 30px; -unity-font-style: bold; color: rgb(0, 0, 0); border-right-width: 2px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); height: 100%;" />
+                                <ui:Label text="Label" display-tooltip-when-elided="true" name="ThirdAnswerLabel" class="Answers" style="width: 80%; font-size: 16px; -unity-font-style: bold; white-space: normal; color: rgb(0, 0, 0);" />
+                            </ui:Button>
+                            <ui:Button display-tooltip-when-elided="true" name="FourthAnswer" class="TriviaButton" style="width: 90%; flex-direction: row; height: 15%; color: rgb(238, 238, 238); background-color: rgba(88, 88, 88, 0); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-left-width: 2px; border-right-width: 2px; border-top-width: 2px; border-bottom-width: 2px; margin-top: 5px;">
+                                <ui:Label text="D" display-tooltip-when-elided="true" name="FourthLetter" class="LetterTriviaAnswer" style="width: 20%; font-size: 30px; -unity-font-style: bold; color: rgb(0, 0, 0); border-right-width: 2px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); height: 100%;" />
+                                <ui:Label text="Label" display-tooltip-when-elided="true" name="FourthAnswerLabel" class="Answers" style="width: 80%; font-size: 16px; -unity-font-style: bold; white-space: normal; color: rgb(0, 0, 0);" />
+                            </ui:Button>
+                        </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
