--- a/Assets/UI/Styles/Trivia.uss
+++ b/Assets/UI/Styles/Trivia.uss
@@ -145,10 +145,10 @@
 .NextQuestionButton {
     width: 30%;
     height: 80%;
-    background-color: rgba(255, 215, 0, 255);
+    background-color: rgb(255, 215, 0);
     -unity-font-style: bold;
     font-size: 24px;
-    color: rgba(0, 0, 0, 255);
+    color: rgb(0, 0, 0);
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     border-top-right-radius: 8px;
@@ -171,12 +171,78 @@
 
 .DoneButton:active {
     margin-right: 1px;
-    background-color: rgba(217, 15, 24, 255);
-    color: rgba(255, 255, 255, 255);
+    background-color: rgb(217, 15, 24);
+    color: rgb(255, 255, 255);
     font-size: 30px;
     opacity: 0.5;
 }
 
 .DoneButton {
-    background-color: rgba(221, 7, 7, 255);
+    background-color: rgb(221, 7, 7);
+}
+
+.BackButton {
+    width: 8%;
+    height: 100%;
+    background-image: url('/Assets/UI/Textures/Back.png');
+    -unity-background-scale-mode: scale-to-fit;
+    background-color: rgba(88, 88, 88, 0);
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+}
+
+.BackButton:active {
+    width: 8%;
+    height: 100%;
+    background-image: url('/Assets/UI/Textures/Back.png');
+    -unity-background-scale-mode: scale-to-fit;
+    background-color: rgba(88, 88, 88, 0);
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+    opacity: 0.6;
+}
+
+.RestartButton {
+    background-image: url('/Assets/UI/Textures/Restart.png');
+    -unity-background-scale-mode: stretch-to-fill;
+    background-color: rgba(88, 88, 88, 0);
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+    width: 10%;
+    height: 100%;
+    -unity-text-align: middle-left;
+}
+
+.RestartButton:active {
+    background-image: url('/Assets/UI/Textures/Restart.png');
+    -unity-background-scale-mode: stretch-to-fill;
+    background-color: rgba(88, 88, 88, 0);
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+    width: 10%;
+    height: 100%;
+    -unity-text-align: middle-left;
+    opacity: 0.6;
+}
+
+.BodyContainer {
+    width: 100%;
+    height: 90%;
+    display: none;
+    border-left-color: rgba(255, 255, 255, 255);
+    border-right-color: rgba(255, 255, 255, 255);
+    border-top-color: rgba(255, 255, 255, 255);
+    border-bottom-color: rgba(255, 255, 255, 255);
+    border-top-width: 2px;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
 }
